# documents-storage-api

./: .env.prod  .gitignore  README.rst  build_nix.sh  build_windows.ps1  docker-compose.default.yml  docker-compose.dockerhub.yml  dockerfile  install_nix.sh  install_windows.ps1  predefined_document_types.json  pyproject.toml  requirements.txt  setup.cfg  start.dockerfile  test.dockerfile
.github/workflows/: code_cov_sec.yml  dockerhub.yml  security.yml  snyk-infrastructure.yml  testing.yml
docker/: docker-compose.yml
documents_storage_api/: main.py
documents_storage_api/common/: responses.py
documents_storage_api/middlewares/: require_auth.py
documents_storage_api/models/: account.py  common.py  document.py  document_type.py
documents_storage_api/models/account/: api.py  base.py  responses.py
documents_storage_api/models/default/: responses.py
documents_storage_api/models/document/: api.py  base.py  responses.py
documents_storage_api/models/document_type/: api.py  base.py  responses.py
documents_storage_api/routers/: accounts.py  bulk_export.py  default.py  document_types.py  documents.py  export_files.py  import_files.py  media.py  tags.py
documents_storage_api/services/: auth.py  generate_admin_account.py  hash_password.py  initial_setup.py  ngram.py  notifications.py  paths.py
tests/: conftest.py  docker-compose.yml
tests/unit/: account.py  auth.py  test_account.py  test_accounts.py  test_default.py  test_document.py  test_document_type.py  test_document_types.py  test_documents.py  test_media.py  test_tags.py
(+4 files in other folders)
