[tool.poetry]
name = "documents-storage-api"
version = "0.8.1"
description = "API for documents-storage app"
authors = ["Tafeen <taafeenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
python-jose = "^3.3.0"
mongoengine = "^0.23.1"
python-multipart = "^0.0.5"
PyJWT = "^2.1.0"
aiofiles = "^0.7.0"
requests = "^2.26.0"
single-source = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--disable-warnings -v"
testpaths = [
    "tests"
]